--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="cards-div">
                 <div class="card-ind">
-                    <img src="./assets/IMG/PUDIM.jpg" alt="">
+                    <img src="./PUDIM.jpg" alt="">
                     <span>PUDIM DE LEITE CONDENSADO</span>
                     <p>Pudim de Leite Condensado: Um doce clássico feito com leite condensado e com cobertura de
                         caramelo que derrete e desmancha na boca...</p>
@@ -62,7 +62,7 @@
 
 
                 <div class="card-ind">
-                    <img src="./assets/IMG/torta.jfif" alt="">
+                    <img src="./torta.jfif" alt="">
                     <span>BOLO DE CHOCOLATE</span>
                     <p>Bolo delicioso feito com chocolate de qualidade e confeitado com cacau em pó.</p>
                     <h1>R$ 27,90</h1>
@@ -71,7 +71,7 @@
 
 
                 <div class="card-ind">
-                    <img src="./assets/IMG/Brigadeiro.jpg" alt="">
+                    <img src="./Brigadeiro.jpg" alt="">
                     <span>BRIGADEIRO</span>
                     <p>Os ingredientes do brigadeiro são leite condensado, chocolate em pó, manteiga e chocolate
                         granulado para a cobertura.</p>
@@ -81,7 +81,7 @@
 
 
                 <div class="card-ind">
-                    <img src="./assets/IMG/PÃO DE MAFRA.jpg" alt="">
+                    <img src="./PÃO DE MAFRA.jpg" alt="">
                     <span>PÃO DE MAFRA</span>
                     <p>O Pão de Mafra é uma variedade de pão regional, produzido na região de Mafra, em Portugal.</p>
                     <h1>R$ 4,90</h1>
@@ -90,7 +90,7 @@
 
 
                 <div class="card-ind">
-                    <img src="./assets/IMG/COXINHA.jpg" alt="">
+                    <img src="./COXINHA.jpg" alt="">
                     <span>COXINHA DE FRANGO</span>
                     <p>O sabor, a textura, a proporção entre massa e recheio, a casquinha, o formato. Absolutamente tudo
                         foi levado em conta durante os testes dessa receita para que o resultado seja o mais próximo da
@@ -105,7 +105,7 @@
 
 
         <section id="contato">
-            <img src="./assets/IMG/waves.svg" alt="">
+            <img src="./waves.svg" alt="">
             <div class="contato-info">
                 <h1>CONTATOS DA EMPRESA</h1>
                 <span>Telefone: (??) ?????-????</span>
